action: Add frontend linter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  main:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,8 +19,17 @@ jobs:
           go-version-file: 'backend/go.mod'
           cache-dependency-path: |
             backend/go.sum
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
 
-      - name: Test
+      - name: Test backend
         run: |
-          cd backend
           make test
+        working-directory: ./backend
+
+      - name: Lint frontend
+        run: |
+          npm install
+          npm run lint
+        working-directory: ./frontend
